pamc/src/tests/sample_code/should_fail/scope/fun_shadows_own_param.ph
type U {
    .U: U,
}

let f = fun g(g: U): U {
    U.U
};
